first version v01 : issue double post not fixed yet

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-# .env.example
-NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-# Add more as needed (e.g., PLAUSIBLE_DOMAIN, SENTRY_DSN)
+# Public (safe to expose)
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# Server-side (do NOT expose to client)
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+# Optional but recommended for API route inserts
+SUPABASE_SERVICE_ROLE_KEY=
