--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-# Dependencies and builds
+# node
 node_modules
 .next
 out
-# Env files
-.env*
+
+# env
+.env
+.env.*
 !.env.example
-# OS/editor
+
+# misc
 .DS_Store
 *.log
